--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   
-  <link rel="canonical" href="http://lkbgift.github.io">
+  <link rel="canonical" href="http://rememberlenny.github.io">
   <link href="/favicon.png" rel="icon">
   <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css">
   <link href="/atom.xml" rel="alternate" title="Remember Lenny" type="application/atom+xml">
@@ -62,7 +62,7 @@
   
 <form action="http://google.com/search" method="get">
   <fieldset role="search">
-    <input type="hidden" name="q" value="site:lkbgift.github.io" />
+    <input type="hidden" name="q" value="site:rememberlenny.github.io" />
     <input class="search" type="text" name="q" results="0" placeholder="Search"/>
   </fieldset>
 </form>
@@ -361,7 +361,7 @@ Ironically, in a place where old browsers are such a problem, I have yet to see 
 
 <h3>Step 5: Export</h3>
 
-<p>From here, you have a map with some generic circles. You can make some additional styling choices to the land and ocean. If you want to make the purple map that I had, you can find the style.mss content <a href="https://gist.github.com/lkbgift/5163407">here</a></p>
+<p>From here, you have a map with some generic circles. You can make some additional styling choices to the land and ocean. If you want to make the purple map that I had, you can find the style.mss content <a href="https://gist.github.com/rememberlenny/5163407">here</a></p>
 
 <p>Go ahead and click Export to get the choices of different export formats. Personally, I like to screenshot the export screen, then modify the screenshot in Photoshop. I have found it looks more like the way I want it to. Otherwise, explore in PNG and set the dimensions.</p>
 
